Bug 158505 - Crash exporting Writer file with bibliography to PDF
Summary: Crash exporting Writer file with bibliography to PDF
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Printing and PDF export (show other bugs)
Version:
(earliest affected)
7.6.0.0 alpha0+
Hardware: All All
: medium critical
Assignee: dolezvo1
URL:
Whiteboard: target:24.8.0 target:7.6.5 target:24....
Keywords: bibisected, bisected, regression
Depends on:
Blocks: Bibliography PDF-Export Crash
  Show dependency treegraph
 
Reported: 2023-12-03 19:41 UTC by overwerktrommel
Modified: 2023-12-15 20:04 UTC (History)
6 users (show)

See Also:
Crash report or crash signature:


Attachments
File causing crash with Pdf export (30.23 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2023-12-03 19:42 UTC, overwerktrommel
Details
Application-not-responding (116.50 KB, image/png)
2023-12-04 17:00 UTC, ToanTran
Details
minimal ODT sample (21.37 KB, application/vnd.oasis.opendocument.text)
2023-12-08 13:51 UTC, stragu
Details

Note You need to log in before you can comment on or make changes to this bug.
Description overwerktrommel 2023-12-03 19:41:19 UTC
Description:
Exporting a specific docx file leads to a hanging process and continuously increasing memory usage on MacOs Ventura.

Steps to Reproduce:
1. Open file
2.Click File -> Export As -> Export Directly as PDF

Actual Results:
100% processor usage and increasing memory usage until I kill the process (>50GB)

Expected Results:
Succesfull Pdf export


Reproducible: Always


User Profile Reset: Yes

Additional Info:
Version: 7.6.3.2 (AARCH64) / LibreOffice Community
Build ID: 29d686fea9f6705b262d369fede658f824154cc0
CPU threads: 10; OS: Mac OS X 13.4.1; UI render: Skia/Metal; VCL: osx
Locale: en-US (en_NL.UTF-8); UI: en-US
Calc: threaded
Comment 1 overwerktrommel 2023-12-03 19:42:44 UTC
Created attachment 191205 [details]
File causing crash with Pdf export
Comment 2 m_a_riosv 2023-12-03 22:43:51 UTC
Seems the issue is the Bibliography index, deleting it and redoing, exports with no issue.
Comment 3 ToanTran 2023-12-04 16:59:47 UTC
I am experiencing the same issue.

This issue should be considered critical.
Comment 4 ToanTran 2023-12-04 17:00:49 UTC
Created attachment 191231 [details]
Application-not-responding
Comment 5 stragu 2023-12-08 13:51:43 UTC
Created attachment 191314 [details]
minimal ODT sample

Reproduced in:

Version: 7.6.4.1 (X86_64) / LibreOffice Community
Build ID: e19e193f88cd6c0525a17fb7a176ed8e6a3e2aa1
CPU threads: 8; OS: Linux 5.15; UI render: default; VCL: gtk3
Locale: en-AU (en_AU.UTF-8); UI: en-US
Calc: threaded

And a recent trunk build:

Version: 24.2.0.0.alpha1+ (X86_64) / LibreOffice Community
Build ID: 0ddd9f7e055a0c1ecb120de3e40c3fdb8373e9dc
CPU threads: 8; OS: Linux 5.15; UI render: default; VCL: gtk3
Locale: en-AU (en_AU.UTF-8); UI: en-US
Calc: threaded

Also frozen with smaller ODT attached, based on original sample.

No crash in 7.5.9.
Comment 6 stragu 2023-12-08 13:56:00 UTC
Bibisected freeze on PDF export with linux-64-7.6 to first bad build commit [840a451d48546bc626c9a4c56125c85bab608c3c] which points to:

commit 7b99871635cd48c2a8a1d0afbd7afc60a45cc2ff
author	Vojtěch Doležal	Mon Feb 27 08:52:35 2023 +0100
committer	Miklos Vajna	Tue Mar 07 07:12:31 2023 +0000
tdf#153396 - Bibliography marks improvements
Change-Id: Ic1b5c8c9590c0338dcfc4fa3a981142bddae0113
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/147868

Using:

instdir/program/soffice --headless --convert-to pdf /path/to/biblio-pdf-crash.odt

Vojtěch, can you please have a look?
Comment 7 dolezvo1 2023-12-09 08:47:32 UTC
Thanks for the minimal example. Cursor was getting stuck due to the bibliography being the last paragraph. I'll submit a fix asap.
Comment 8 dolezvo1 2023-12-12 08:03:31 UTC
(I pushed the fix to gerrit few days ago, it could possibly be merged if someone reviews it)
Comment 9 Commit Notification 2023-12-13 14:25:53 UTC
Vojtěch Doležal committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/94d18ea557a03c1f2d450454908787f7d3af8a6e

tdf#158505 - Fix PDF export when bibliography is last paragraph

It will be available in 24.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 10 Commit Notification 2023-12-13 19:27:24 UTC
Vojtěch Doležal committed a patch related to this issue.
It has been pushed to "libreoffice-7-6":

https://git.libreoffice.org/core/commit/924fb10b2a7a513b6626610e12ff3a5d21aa492a

tdf#158505 - Fix PDF export when bibliography is last paragraph

It will be available in 7.6.5.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 11 Commit Notification 2023-12-14 08:45:02 UTC
Vojtěch Doležal committed a patch related to this issue.
It has been pushed to "libreoffice-24-2":

https://git.libreoffice.org/core/commit/347e8161ba38822de96851dd7ed92b7e85ac1943

tdf#158505 - Fix PDF export when bibliography is last paragraph

It will be available in 24.2.0.0.beta2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 12 stragu 2023-12-14 14:55:51 UTC
No crash in:

Version: 24.8.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: b2fd2c247f7f62f9ae6826c4f1b9065a50313217
CPU threads: 8; OS: Linux 5.15; UI render: default; VCL: gtk3
Locale: en-AU (en_AU.UTF-8); UI: en-US
Calc: threaded

Thank you! Vojtěch, are you ok to set to "fixed"?
Comment 13 dolezvo1 2023-12-14 14:59:53 UTC
Yes, seems to be resolved as far as I can tell.