tdf#158505 - Fix PDF export when bibliography is last paragraph

Change-Id: Iadafff97ba19d5c24be768238bddb4d684edde1c
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/160509
Tested-by: Jenkins
Reviewed-by: Mike Kaganski <mike.kaganski@collabora.com>
(cherry picked from commit 94d18ea557a03c1f2d450454908787f7d3af8a6e)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/160647
Reviewed-by: Adolfo Jayme Barrientos <fitojb@ubuntu.com>